--- a/views/profileindex.html
+++ b/views/profileindex.html
@@ -150,6 +150,7 @@
           <fieldset class="browserSettings">
             <legend class="translate">Basal rates [unit/hour]</legend>
             <div id="pe_basal_placeholder"></div>
+            <div>Total Per Day: <span id="pe_basalTotal_placeholder"></span></div>
           </fieldset>
 
           <fieldset class="browserSettings">
